--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+      DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,6 +39,7 @@ jobs:
       - name: Replace API Key in JavaScript
         run: |
           sed -i "s/process.env.OPENROUTER_API_KEY/'${{ secrets.OPENROUTER_API_KEY }}'/" chat.js
+          sed -i "s/process.env.OPENROUTER_API_KEY/'${{ secrets.DISCORD_WEBHOOK_URL }}'/" chat.js
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
